--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 javac.debug=false
-user.properties.file=C:\\Users\\kaio.teixeira\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\KaioT\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
