--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,6 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
 javac.debug=false
+javadoc.preview=true
 user.properties.file=C:\\Users\\kaio.teixeira\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
